[package]
name = "feature-probe-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "common-proto",
  "server-base",
  "server-state",
  "server-core",
  "server-listener",
  "server-hproxy",
  "server-grpc",
]

[features]
default = ["server"]
server = [
  "server-base",
  "server-state",
  "server-core",
  "server-listener",
  "server-hproxy",
  "server-grpc",
]
client = []

[build-dependencies]
vergen = "3"

[dependencies]
log = "0.4"

server-base = { optional = true, path = "./server-base" }
server-state = { optional = true, path = "./server-state" }
server-core = { optional = true, path = "./server-core" }
server-listener = { optional = true, path = "./server-listener" }
server-hproxy = { optional = true, path = "./server-hproxy" }
server-grpc = { optional = true, path = "./server-grpc" }