[package]
name = "feature-probe-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "client-core",
  "client-proto",
  "client-uniffi",
  "server-proto",
  "server-base",
  "server-state",
  "server-core",
  "server-listener",
  "server-hproxy",
  "server-grpc",
  "server",
]

[features]
default = ["server"]
client = []

[dependencies]

server = { optional = true, path = "./server" }

# this profile is for client, should replace in Makefile when build for server
[profile.release]
lto = true
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
codegen-units = 1