[package]
name = "client_core"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.0"
backtrace = "0.3"
crossbeam-channel = "0.5"
log = { version = "0.4", features = ["std", "release_max_level_info"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stream-cancel = "0.8"
time = "0.3"
url = "2.2"
webpki = "0.21"
quinn = { version = "0.8", default-features = false, features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = { version = "0.23", features = ["dangerous_configuration"] }
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = "0.2.1"
futures = "0.3"
anyhow = "1.0.22"
lazy_static = "1.4"
parking_lot = "0.11"
flate2 = "1.0.19"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = [
	"json",
	"rustls-tls",
	"gzip",
] }

client-proto = { path = "../client-proto" }

[dev-dependencies]
directories-next = "1.0.1"
tracing-appender = "0.2"
tracing-core = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter"] }
