[package]
name = "server-base"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.0"
log = "0.4"
config = "0.11"
async-trait = "0.1"
rand = "^0.8"
parking_lot = "0.11"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
stream-cancel = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minstant = "0.1"
tonic = "0.7"

common-proto = { path = "../common-proto" }

