[package]
name = "server-core"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4"
rand = "^0.8"
parking_lot = "0.11"
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
dashmap = { version = "4.0", features = ["raw-api"]}
fxhash = "0.2"

server-base = { path = "../server-base" }
server-state = { path = "../server-state" }