[package]
name = "server-state"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "^2.0"
futures = "0.3"
log = "0.4"
rand = "^0.8"
lazy_static = "1.4"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

server-base = { path = "../server-base" }

[dev-dependencies]
simple_logger = "1.0"
